Added success and error messages when posting reviews. Fixed some small styling things.  Finished with part 2.

--- a/laravel/public/css/reviews.css
+++ b/laravel/public/css/reviews.css
@@ -12,3 +12,11 @@
 #review-stars span {
     float: right;   
 }
+
+.success-message {
+    font-size: 1.8em;
+}
+
+.error-message {
+    color: red;
+}
