Added genre filtering to the search page.  Finished the assignment

--- a/laravel/public/css/search.css
+++ b/laravel/public/css/search.css
@@ -13,6 +13,11 @@ body, html {
     height: 100%;
     vertical-align: middle;
 }
+
 .dvd-search {
     font-size: 1.5em;
+}
+
+.genre-sidebar {
+    text-align: right;
 }
